environments/gloo-gateway/gateway-api/live/aigw-config/base/bedrock/bedrock-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bedrock-route
  namespace: gloo-system
spec:
  hostnames:
    - llm.gwapi.glooplatform.com
  parentRefs:
  - name: ai-gateway
    namespace: gloo-system
  rules:
  - backendRefs:
    - group: gloo.solo.io
      kind: Upstream
      name: bedrock-upstream
      namespace: gloo-system
    matches:
    - path:
        type: PathPrefix
        value: /bedrock
---
